# SDL_CMake_Subdir_Template

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
